@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<reginadata engine="4.5.1">
+<reginadata engine="4.6">
 <packet label="Container"
 	type="Container" typeid="1"
 	parent="">
@@ -808,92 +808,8 @@ jZdNkm4pXQo+PgpzdGFydHhyZWYKMzUwNjYKJSVFT0YK
 <packet label="Almost Normal Surfaces"
 	type="Normal Surface List" typeid="6"
 	parent="Layered Solid Torus">
-  <params embedded="T" flavourid="100"
+  <params embedded="T" flavourid="102"
 	flavour="Standard almost normal (tri-quad-oct)"/>
-  <surface len="40" name=""> 0 1 1 1 5 1 18 1 20 1 21 1 35 1
-	<euler value="-2"/>
-	<orbl value="false"/>
-	<twosided value="false"/>
-	<connected value="true"/>
-	<realbdry value="T"/>
-	<compact value="T"/> </surface>
-  <surface len="40" name=""> 6 1 15 1 24 1 35 1
-	<euler value="-1"/>
-	<orbl value="false"/>
-	<twosided value="false"/>
-	<connected value="true"/>
-	<realbdry value="T"/>
-	<compact value="T"/> </surface>
-  <surface len="40" name=""> 2 1 3 1 4 1 10 1 11 1 12 1 13 1 20 1 21 1 24 1 35 2
-	<euler value="-2"/>
-	<orbl value="true"/>
-	<twosided value="true"/>
-	<connected value="true"/>
-	<realbdry value="T"/>
-	<compact value="T"/> </surface>
-  <surface len="40" name=""> 0 1 1 1 7 1 10 1 11 1 12 1 13 1 20 1 21 1 24 1 35 2
-	<euler value="-2"/>
-	<orbl value="true"/>
-	<twosided value="true"/>
-	<connected value="true"/>
-	<realbdry value="T"/>
-	<compact value="T"/> </surface>
-  <surface len="40" name=""> 0 1 1 1 8 1 10 1 11 1 16 1 20 1 21 1 35 1
-	<euler value="-2"/>
-	<orbl value="false"/>
-	<twosided value="false"/>
-	<connected value="true"/>
-	<realbdry value="T"/>
-	<compact value="T"/> </surface>
-  <surface len="40" name=""> 2 1 3 1 8 1 10 1 11 1 12 1 13 1 15 1 20 1 21 1 24 2 35 3
-	<euler value="-4"/>
-	<orbl value="false"/>
-	<twosided value="false"/>
-	<connected value="true"/>
-	<realbdry value="T"/>
-	<compact value="T"/> </surface>
-  <surface len="40" name=""> 5 2 12 1 13 1 14 1 20 1 21 1 24 1 35 2
-	<euler value="-2"/>
-	<orbl value="true"/>
-	<twosided value="true"/>
-	<connected value="true"/>
-	<realbdry value="T"/>
-	<compact value="T"/> </surface>
-  <surface len="40" name=""> 0 2 1 2 6 1 10 1 11 1 16 1 20 1 21 1 35 1
-	<euler value="0"/>
-	<orbl value="false"/>
-	<twosided value="false"/>
-	<connected value="true"/>
-	<realbdry value="T"/>
-	<compact value="T"/> </surface>
-  <surface len="40" name=""> 0 2 1 2 6 2 10 1 11 1 17 1 20 1 21 1 24 1 35 2
-	<euler value="-2"/>
-	<orbl value="true"/>
-	<twosided value="true"/>
-	<connected value="true"/>
-	<realbdry value="T"/>
-	<compact value="T"/> </surface>
-  <surface len="40" name=""> 0 1 1 1 2 1 3 1 10 1 11 1 12 1 13 1 20 1 21 1 24 1 35 2
-	<euler value="-1"/>
-	<orbl value="true"/>
-	<twosided value="true"/>
-	<connected value="true"/>
-	<realbdry value="T"/>
-	<compact value="T"/> </surface>
-  <surface len="40" name=""> 2 1 3 1 5 1 12 1 13 1 19 1 20 1 21 1 24 2 35 3
-	<euler value="-4"/>
-	<orbl value="false"/>
-	<twosided value="false"/>
-	<connected value="true"/>
-	<realbdry value="T"/>
-	<compact value="T"/> </surface>
-  <surface len="40" name=""> 6 1 15 1 22 1 23 1 38 1
-	<euler value="-1"/>
-	<orbl value="false"/>
-	<twosided value="false"/>
-	<connected value="true"/>
-	<realbdry value="T"/>
-	<compact value="T"/> </surface>
   <surface len="40" name=""> 2 1 3 1 4 1 10 1 11 1 12 1 13 1 20 1 21 1 22 1 23 1 30 1 31 1 32 1 33 1
 	<euler value="0"/>
 	<orbl value="true"/>
@@ -908,8 +824,57 @@ jZdNkm4pXQo+PgpzdGFydHhyZWYKMzUwNjYKJSVFT0YK
 	<connected value="true"/>
 	<realbdry value="T"/>
 	<compact value="T"/> </surface>
+  <surface len="40" name=""> 2 2 3 2 12 2 13 2 15 2 22 2 23 2 29 2 30 2 31 2 32 3 33 3 34 1
+	<euler value="-2"/>
+	<orbl value="true"/>
+	<twosided value="true"/>
+	<connected value="true"/>
+	<realbdry value="T"/>
+	<compact value="T"/> </surface>
+  <surface len="40" name=""> 0 1 1 1 2 1 3 1 10 1 11 1 12 1 13 1 20 1 21 1 24 1 35 2
+	<euler value="-1"/>
+	<orbl value="true"/>
+	<twosided value="true"/>
+	<connected value="true"/>
+	<realbdry value="T"/>
+	<compact value="T"/> </surface>
+  <surface len="40" name=""> 0 2 1 2 16 2 25 2 32 1 33 1 34 1
+	<euler value="0"/>
+	<orbl value="true"/>
+	<twosided value="true"/>
+	<connected value="true"/>
+	<realbdry value="T"/>
+	<compact value="T"/> </surface>
   <surface len="40" name=""> 5 2 12 1 13 1 14 1 20 1 21 1 22 1 23 1 30 1 31 1 32 1 33 1
 	<euler value="0"/>
+	<orbl value="true"/>
+	<twosided value="true"/>
+	<connected value="true"/>
+	<realbdry value="T"/>
+	<compact value="T"/> </surface>
+  <surface len="40" name=""> 2 2 3 2 5 2 12 2 13 2 19 2 20 2 21 2 22 3 23 3 24 1 30 3 31 3 32 3 33 3
+	<euler value="-2"/>
+	<orbl value="true"/>
+	<twosided value="true"/>
+	<connected value="true"/>
+	<realbdry value="T"/>
+	<compact value="T"/> </surface>
+  <surface len="40" name=""> 0 1 1 1 5 1 18 1 20 1 21 1 35 1
+	<euler value="-2"/>
+	<orbl value="false"/>
+	<twosided value="false"/>
+	<connected value="true"/>
+	<realbdry value="T"/>
+	<compact value="T"/> </surface>
+  <surface len="40" name=""> 0 2 1 2 5 4 12 2 13 2 18 2 20 2 21 2 22 2 23 2 25 2 30 2 31 2 32 3 33 3 34 1
+	<euler value="-2"/>
+	<orbl value="true"/>
+	<twosided value="true"/>
+	<connected value="true"/>
+	<realbdry value="T"/>
+	<compact value="T"/> </surface>
+  <surface len="40" name=""> 2 2 3 2 9 2 10 2 11 2 12 3 13 3 14 1 20 3 21 3 22 3 23 3 30 3 31 3 32 3 33 3
+	<euler value="-2"/>
 	<orbl value="true"/>
 	<twosided value="true"/>
 	<connected value="true"/>
@@ -922,17 +887,31 @@ jZdNkm4pXQo+PgpzdGFydHhyZWYKMzUwNjYKJSVFT0YK
 	<connected value="true"/>
 	<realbdry value="T"/>
 	<compact value="T"/> </surface>
-  <surface len="40" name=""> 0 1 1 1 2 1 3 1 10 1 11 1 12 1 13 1 20 1 21 1 22 1 23 1 30 1 31 1 32 1 33 1
-	<euler value="1"/>
+  <surface len="40" name=""> 6 2 15 2 22 1 23 1 24 1 30 1 31 1 32 1 33 1
+	<euler value="0"/>
 	<orbl value="true"/>
 	<twosided value="true"/>
 	<connected value="true"/>
 	<realbdry value="T"/>
 	<compact value="T"/> </surface>
-  <surface len="40" name=""> 6 2 15 2 22 1 23 1 24 1 30 1 31 1 32 1 33 1
-	<euler value="0"/>
+  <surface len="40" name=""> 2 2 3 2 8 2 10 2 11 2 12 2 13 2 15 2 20 2 21 2 22 3 23 3 24 1 30 3 31 3 32 3 33 3
+	<euler value="-2"/>
 	<orbl value="true"/>
 	<twosided value="true"/>
+	<connected value="true"/>
+	<realbdry value="T"/>
+	<compact value="T"/> </surface>
+  <surface len="40" name=""> 6 1 15 1 22 1 23 1 38 1
+	<euler value="-1"/>
+	<orbl value="false"/>
+	<twosided value="false"/>
+	<connected value="true"/>
+	<realbdry value="T"/>
+	<compact value="T"/> </surface>
+  <surface len="40" name=""> 0 2 1 2 6 5 10 2 11 2 15 3 22 1 23 1 28 2 30 2 31 2 32 1 33 1 36 1
+	<euler value="-2"/>
+	<orbl value="false"/>
+	<twosided value="false"/>
 	<connected value="true"/>
 	<realbdry value="T"/>
 	<compact value="T"/> </surface>
@@ -943,24 +922,17 @@ jZdNkm4pXQo+PgpzdGFydHhyZWYKMzUwNjYKJSVFT0YK
 	<connected value="true"/>
 	<realbdry value="T"/>
 	<compact value="T"/> </surface>
-  <surface len="40" name=""> 0 3 1 3 2 1 3 1 6 1 10 2 11 2 18 1 20 1 21 1 26 2 30 1 31 1 36 1
-	<euler value="-1"/>
+  <surface len="40" name=""> 0 2 1 2 6 1 10 1 11 1 16 1 20 1 21 1 35 1
+	<euler value="0"/>
 	<orbl value="false"/>
 	<twosided value="false"/>
 	<connected value="true"/>
 	<realbdry value="T"/>
 	<compact value="T"/> </surface>
-  <surface len="40" name=""> 4 2 16 2 25 2 32 1 33 1 34 1
+  <surface len="40" name=""> 0 1 1 1 8 1 10 1 11 1 16 1 20 1 21 1 35 1
 	<euler value="-2"/>
-	<orbl value="true"/>
-	<twosided value="true"/>
-	<connected value="true"/>
-	<realbdry value="T"/>
-	<compact value="T"/> </surface>
-  <surface len="40" name=""> 0 2 1 2 16 2 25 2 32 1 33 1 34 1
-	<euler value="0"/>
-	<orbl value="true"/>
-	<twosided value="true"/>
+	<orbl value="false"/>
+	<twosided value="false"/>
 	<connected value="true"/>
 	<realbdry value="T"/>
 	<compact value="T"/> </surface>
@@ -978,8 +950,92 @@ jZdNkm4pXQo+PgpzdGFydHhyZWYKMzUwNjYKJSVFT0YK
 	<connected value="true"/>
 	<realbdry value="T"/>
 	<compact value="T"/> </surface>
+  <surface len="40" name=""> 0 1 1 1 8 3 10 3 11 3 16 1 20 1 21 1 26 2 30 1 31 1 36 1
+	<euler value="-5"/>
+	<orbl value="false"/>
+	<twosided value="false"/>
+	<connected value="true"/>
+	<realbdry value="T"/>
+	<compact value="T"/> </surface>
+  <surface len="40" name=""> 0 3 1 3 2 1 3 1 6 1 10 2 11 2 18 1 20 1 21 1 26 2 30 1 31 1 36 1
+	<euler value="-1"/>
+	<orbl value="false"/>
+	<twosided value="false"/>
+	<connected value="true"/>
+	<realbdry value="T"/>
+	<compact value="T"/> </surface>
   <surface len="40" name=""> 0 6 1 6 6 4 10 4 11 4 16 2 20 2 21 2 26 2 30 1 31 1 37 1
 	<euler value="0"/>
+	<orbl value="true"/>
+	<twosided value="true"/>
+	<connected value="true"/>
+	<realbdry value="T"/>
+	<compact value="T"/> </surface>
+  <surface len="40" name=""> 4 2 16 2 25 2 32 1 33 1 34 1
+	<euler value="-2"/>
+	<orbl value="true"/>
+	<twosided value="true"/>
+	<connected value="true"/>
+	<realbdry value="T"/>
+	<compact value="T"/> </surface>
+  <surface len="40" name=""> 2 1 3 1 4 1 10 1 11 1 12 1 13 1 20 1 21 1 24 1 35 2
+	<euler value="-2"/>
+	<orbl value="true"/>
+	<twosided value="true"/>
+	<connected value="true"/>
+	<realbdry value="T"/>
+	<compact value="T"/> </surface>
+  <surface len="40" name=""> 0 1 1 1 7 1 10 1 11 1 12 1 13 1 20 1 21 1 24 1 35 2
+	<euler value="-2"/>
+	<orbl value="true"/>
+	<twosided value="true"/>
+	<connected value="true"/>
+	<realbdry value="T"/>
+	<compact value="T"/> </surface>
+  <surface len="40" name=""> 5 2 12 1 13 1 14 1 20 1 21 1 24 1 35 2
+	<euler value="-2"/>
+	<orbl value="true"/>
+	<twosided value="true"/>
+	<connected value="true"/>
+	<realbdry value="T"/>
+	<compact value="T"/> </surface>
+  <surface len="40" name=""> 2 1 3 1 5 1 12 1 13 1 19 1 20 1 21 1 24 2 35 3
+	<euler value="-4"/>
+	<orbl value="false"/>
+	<twosided value="false"/>
+	<connected value="true"/>
+	<realbdry value="T"/>
+	<compact value="T"/> </surface>
+  <surface len="40" name=""> 2 2 3 2 9 2 10 2 11 2 12 3 13 3 14 1 20 3 21 3 24 3 35 6
+	<euler value="-8"/>
+	<orbl value="true"/>
+	<twosided value="true"/>
+	<connected value="true"/>
+	<realbdry value="T"/>
+	<compact value="T"/> </surface>
+  <surface len="40" name=""> 0 2 1 2 6 2 10 1 11 1 17 1 20 1 21 1 24 1 35 2
+	<euler value="-2"/>
+	<orbl value="true"/>
+	<twosided value="true"/>
+	<connected value="true"/>
+	<realbdry value="T"/>
+	<compact value="T"/> </surface>
+  <surface len="40" name=""> 6 1 15 1 24 1 35 1
+	<euler value="-1"/>
+	<orbl value="false"/>
+	<twosided value="false"/>
+	<connected value="true"/>
+	<realbdry value="T"/>
+	<compact value="T"/> </surface>
+  <surface len="40" name=""> 2 1 3 1 8 1 10 1 11 1 12 1 13 1 15 1 20 1 21 1 24 2 35 3
+	<euler value="-4"/>
+	<orbl value="false"/>
+	<twosided value="false"/>
+	<connected value="true"/>
+	<realbdry value="T"/>
+	<compact value="T"/> </surface>
+  <surface len="40" name=""> 0 1 1 1 2 1 3 1 10 1 11 1 12 1 13 1 20 1 21 1 22 1 23 1 30 1 31 1 32 1 33 1
+	<euler value="1"/>
 	<orbl value="true"/>
 	<twosided value="true"/>
 	<connected value="true"/>
